--- a/localisation/english/deluge_ideas_leaders_laws_advisors_l_english.yml
+++ b/localisation/english/deluge_ideas_leaders_laws_advisors_l_english.yml
@@ -91,6 +91,10 @@
  emperor_ahmed_nihad_desc:0 ""
  swedish_king: "Gustaf V of Bernadotte"
  swedish_king_desc: "Gustav V is descended paternally from the Bernadotte and Oldenburg dynasties. His reign has been more peaceful than that of his predecessor Oscar II. Gustav V kept Sweden out of the Great War and on good terms with both the Continental System and their Anglo-Russian enemies."
+ assen_iv:0 "Assen IV of Battenberg"
+ assen_iv_desc:0 ""
+ ali_iii:0 "Ali III of Yaninan"
+ ali_iii_desc:0 ""
  danish_king:0 "Chrystian X of Glücksburg"
  danish_king_desc:0 ""
  norwegian_king:0 "Haakon VII of Glücksburg"
