--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -216,8 +216,8 @@
  ETH_fascism_party_long:0 "Abyssianian Expansionist Faction"
  ALB_communism_party:0 "Jacobin-Socialist Party"
  ALB_communism_party_long:0 "Albanian Jacobin-Socialist Party"
- ALB_neutrality_party:0 "Zogu Loyalists"
- ALB_neutrality_party_long:0 "House Zogu Loyalists"
+ ALB_neutrality_party:0 "Yaninan Loyalists"
+ ALB_neutrality_party_long:0 "House Yaninan Loyalists"
  ALB_democratic_party:0 "Reformers"
  ALB_democratic_party_long:0 "Albanian Reform Faction"
  ALB_fascism_party:0 "Expansionists"
@@ -256,8 +256,8 @@
  SER_fascism_party_long:0 "Greater Serbia Movement"
  BUL_communism_party:0 "Socialist Party"
  BUL_communism_party_long:0 "Bulgarian Socialist Party"
- BUL_neutrality_party:0 "Koháry Loyalists"
- BUL_neutrality_party_long:0 "House Koháry Loyalists"
+ BUL_neutrality_party:0 "Battenberg Loyalists"
+ BUL_neutrality_party_long:0 "House Battenberg Loyalists"
  BUL_democratic_party:0 "Republican Party"
  BUL_democratic_party_long:0 "Bulgarian Republican Party"
  BUL_fascism_party:0 "Legionnaires"
