--- a/localisation/english/replace/deluge_poland_focuses_l_english.yml
+++ b/localisation/english/replace/deluge_poland_focuses_l_english.yml
@@ -6,7 +6,7 @@
  POL_death_of_marshal_desc:0 "Józef Klemens Piłsudski, Marshal of Poland, has passed away. Now the fate of the country is being decided — whether the old order will be continued or a new one will begin. Without a doubt, this opens the door to power for some ambitious figures, no matter how much they mourn our loss."
  
  POL_continue_with_sanation:0 "The Party of Power"
- POL_continue_with_sanation_desc:0 "The government has no nobler task than to continue the work of the First Marshal. There are people who are ready to inherit the great responsibility of healing society - to inherit Sanation."
+ POL_continue_with_sanation_desc:0 "The government has no nobler task than to continue the work of the General Inspector. There are people who are ready to inherit the great responsibility of healing society - to inherit Sanation."
  
  POL_smigly_wins:0 "Edward Rydz-Śmigły"
  POL_smigly_wins_desc:0 "Rydz-Śmigły is an ideal candidate for the role of Marshal. This is a person with experience in both the army and aviation, who is not afraid to make difficult decisions. If we want not only to protect Poland, but also to restore it to its former greatness, then we need Edward."
@@ -55,7 +55,7 @@
  POL_teach_about_etatism:0 "Etatism"
  POL_teach_about_etatism_desc:0 "It is unthinkable that foreign companies should take a share in the Polish economy, otherwise it is not our economy at all. It is necessary to develop national capital that can compete with the rest of the world. But since it will take years to cultivate the new bourgeoisie, it is possible to achieve quick results by appropriating the property of others."
  POL_create_sm_ozn:0 "Youth Duty"
- POL_create_sm_ozn_desc:0 "Youth Duty is a youth organization of the CNP. It tells its wards about traditional family and patriotic values, as well as the importance of the army and the Marshal himself. It also prepares them to serve their fatherland — boys to become warriors, and girls to become mothers."
+ POL_create_sm_ozn_desc:0 "Youth Duty is a youth organization of the OZN. It tells its wards about traditional family and patriotic values, as well as the importance of the army and the Marshal himself. It also prepares them to serve their fatherland — boys to become warriors, and girls to become mothers."
  POL_create_opw_ozn:0 "Camp of Fighting Poland"
  POL_create_opw_ozn_desc:0 "If the enemy sets foot on our land, both old and young will fight for their native land until our glorious army expels the foe back home. A paramilitary and covert organization will help us in this, which will train the civilian population for combat operations and support agent networks in the occupied territories."
  POL_abolish_monarchy:0 "Abolish Monarchy"
@@ -83,7 +83,7 @@
  POL_fund_galleries_of_patriotic_art_desc:0 "It is possible to awaken mass consciousness with a new direction in art. A series of patriotic posters and the sponsorship of our artists will spur public sentiment. These works should inspire pride to us, and trembling to the enemies."
  
  POL_sikorski_wins:0 "Władysław Sikorski"
- POL_sikorski_wins_desc:0 "Although Sikorski was not a friend of our beloved Marshal, but he has zeal, and most importantly talent. He is a diligent officer and a true patriot. Who, if not him, will be able to protect our Poland from the tornado of uncertainty that is now dragging the world?"
+ POL_sikorski_wins_desc:0 "Although Sikorski didn't agree with Marshal in many cases, he has zeal, and most importantly talent. He is a diligent officer and a true patriot. Who, if not him, will be able to protect our Poland from the tornado of uncertainty that is now dragging the world?"
  POL_culture_not_race:0 "Culture, not Race"
  POL_culture_not_race_desc:0 "Poland is a multinational state. If we divide its citizens by race, we will not only deprive ourselves of human resources, but also sow distemper. Instead of simply expunging small nations from our lives, we will propose to the government a plan for their acculturation."
  POL_start_cultural_integration:0 "Cultural Integration"
@@ -121,7 +121,7 @@
  POL_better_living_conditions_for_countryside:0 "New Rural Standards"
  POL_better_living_conditions_for_countryside_desc:0 "The biggest problem of rural areas is relatively low living conditions. This has forced a significant part of the rural population to move to large cities, especially in the last decade. We need to make more state donations to create new jobs and modernize local infrastructure."
  POL_make_deal_with_king:0 "Deal with the King"
- POL_make_deal_with_king_desc:0 "Fryderyk Krystian II is not an obstacle to the Sanation government, as his father was. We can use the young king for our purposes by handing him only nominal power. We will play monarchy as long as people like it."
+ POL_make_deal_with_king_desc:0 "Fryderyk Krystian II is not an obstacle to the Sanation government. We can use the young king for our purposes by handing him only nominal power. We will play monarchy as long as people like it."
  
  POL_stachniuk_wins:0 "Jan Stachniuk"
  POL_stachniuk_wins_desc:0 "Stachniuk is a neo-pagan with charm, influence and unusual ideas. He criticizes Christianity and capitalism, and also calls for a return to life in the traditions of the proto-Slavic society. Poland is closer to this ideology than it may seem at first glance, but to prove it, we need to remove the mask of Catholicism from our nation."
@@ -138,22 +138,22 @@
  POL_seek_support_from_catholic_church_desc:0 "The Catholic Church is an important part of Poland and our main ideological pillar. We must win over the church, for example, by transferring a number of property in its favor."
  
  POL_purge_the_party:0 "Party Reshuffles"
- POL_purge_the_party_desc:0 "Do we really need Sanation? Although we have seized power, there are many adherents of the old policy with great influence and authority behind us. If they are not replaced by a new organization, we risk being in a political impasse."
+ POL_purge_the_party_desc:0 "Although we have seized power, there are many adherents of the old policy with great influence and authority behind us. If they are not replaced by a new organization, we risk being in a political impasse."
  
  POL_establish_zadruga:0 "Zadruga"
- POL_establish_zadruga_desc:0 "The previous government got confused about what it wanted to be, and therefore lost. We know our purpose. The Movement of Polish Nationalists Zadruga aims to unite the Slavs within the framework of a single Slavic state and we are honorably ready to take on this mission."
+ POL_establish_zadruga_desc:0 "The previous government got confused about what it wanted to be, and therefore lost. We know our purpose. The Movement of Polish Nationalists Zadruga aims to restore ancient values and belifes we used to celebrate, defeat western back-culture and eliminate all enemies of the fatherland. We are honorably ready to take on this mission."
  POL_take_peoples_property_from_capitalists:0 "Nationalization of Foreign Property"
  POL_take_peoples_property_from_capitalists_desc:0 "The longer we allow foreign capitalists to enrich themselves on the Polish market, the weaker our state becomes. This must end! All the riches of Poland should belong only to its people."
  POL_propagation_of_proletarian_nationalism:0 "Proletarian Nationalism"
  POL_propagation_of_proletarian_nationalism_desc:0 "Unlike the internationalists, we do not set as our goal a world revolution and the overthrow of the state. Poland and its workers are above all. This position should be conveyed both to our citizens and to our neighbors."
  POL_introduction_of_national_collectivist_economy:0 "Collectivist Economy"
  POL_introduction_of_national_collectivist_economy_desc:0 "The next step towards building a nationally oriented state will be the introduction of a collectivist economy, which will combine centralized planning and small entrepreneurship."
- POL_establishment_of_national_creating_community:0 "Collective Enthusiasm"
+ POL_establishment_of_national_creating_community:0 "National Creating Community"
  POL_establishment_of_national_creating_community_desc:0 "We have greatly changed the social and economic life of the Polish people. Now we can start creating a new type of society. There will be no classes in this society, but it will be organized hierarchically, so that everyone does their job, but does not feel oppressed."
  POL_lechitic_legacy:0 "Lechitic Legacy"
  POL_lechitic_legacy_desc:0 "Some say that the Great Lechitic Empire did not exist, but what really matters is that we can use this legend for propaganda purposes and to justify our actions on the world stage."
  POL_gloryfiy_mieslaws_uprising:0 "Honor the Uprising of Miecław"
- POL_gloryfiy_mieslaws_uprising_desc:0 "The uprising of Miecław was a response to high taxes and the suppression of local beliefs by the Catholic Church during the reign of King Mieszko I. He created his own state on the Mazovian land and restored the Slavic faith there. However, this did not last long — in 1047, the Piast king returned and defeated the uprising."
+ POL_gloryfiy_mieslaws_uprising_desc:0 "The uprising of Miecław was a response to high taxes and the suppression of local beliefs by the Catholic Church during the reign of King Mieszko II. He created his own state on the Mazovian land and restored the Slavic faith there. However, this did not last long — in 1047, the Piast king returned and defeated the uprising."
  POL_torch_for_all_slavs:0 "The Torch for All Slavs"
  POL_torch_for_all_slavs_desc:0 "In one of his books, Jan Stachniuk created the concept of a «Supernation» — a nation of all Slavs, where initially all cultures are equal, but which eventually merge into one «Superculture» that will be superior to any other."
  POL_keep_friends_from_above_baltic:0 "Balto-Slavic Kinship"
