--- a/localisation/english/factions_l_english.yml
+++ b/localisation/english/factions_l_english.yml
@@ -7,3 +7,4 @@
  Paris_Accords:0 "Paris Accords"
  Republican_International:0 "Republican International"
  Revolutionary_Commonwealth:0 "Revolutionary Commonwealth"
+ European_Cooperation:0 "European Cooperation"
