--- a/localisation/english/loading_tips_l_english.yml
+++ b/localisation/english/loading_tips_l_english.yml
@@ -57,7 +57,7 @@
  LOADING_TIP_55:0 "In 1861, serfdom was abolished in Russia to prevent the militancy of the lower class. More than 10 million privately owned peasants formally become free men."
  LOADING_TIP_56:0 "On May 1, 1866, the Paris demonstrations turn violent when protesters make political demands. Hussars ride down radicals and onlookers alike. Similar demonstrations are also accompanied by violence in London, Dortmund, Prague and many other European cities."
  LOADING_TIP_57:0 "On May 2, 1866, Parisians stormed armories and barracks and distributed thousands of muskets."
- LOADING_TIP_58:0 "On May 3, 1866, government troops left through the narrow streets and retreated to the city limits. Hundreds of soldiers and revolutionaries died in the battles for the city."
+ LOADING_TIP_58:0 "On May 3, 1866, government troops leave through the narrow streets and retreat beyond Paris. Hundreds of soldiers and revolutionaries died in the battles for the city."
  LOADING_TIP_59:0 "On May 4, 1866, Parisians proclaimed a republic. Government troops begin the siege of the city."
  LOADING_TIP_60:0 "On May 5, 1866, radicals in Toulon, Marseilles and Orleans held large-scale manifestations in support of the republic. Local garrisons refuse to shoot at the crowd."
  LOADING_TIP_61:0 "In June 1866, the Jacobins began to arm themselves in Great Britain, Westphalia, Luxembourg, Italy and many other countries."
