--- a/localisation/english/replace/polish_album_l_english.yml
+++ b/localisation/english/replace/polish_album_l_english.yml
@@ -10,7 +10,7 @@
  march_of_polonia:0 "March of Polonia"
  lancers_came_under_the_window:0 "Lancers Came Under the Window"
  the_oath:0 "The Oath"
- oh_my_rosemary:0 "О, мой розмарин"
+ oh_my_rosemary:0 "Oh My Rosemary"
  god_save_poland:0 "God Save Poland"
  let_poland_be_poland:0 "Let Poland be Poland"
  hey_hey_lancers:0 "Hey, Hey, Lancers"
