--- a/localisation/russian/loading_tips_l_russian.yml
+++ b/localisation/russian/loading_tips_l_russian.yml
@@ -57,7 +57,7 @@
  LOADING_TIP_55:0 "В 1861 году в России было отменено крепостное право, чтобы предотвратить воинственность низшего класса. Более 10 миллионов крестьян, находящихся в частной собственности, формально становятся свободными людьми."
  LOADING_TIP_56:0 "1 мая 1866 года парижские демонстрации становятся ожесточёнными, когда протестующие выдвигают политические требования. Гусары нападают как на радикалов, так и на зевак. Аналогичные демонстрации также сопровождаются насилием в Лондоне, Дортмунде, Праге и многих других городах Европы."
  LOADING_TIP_57:0 "2 мая 1866 года парижане штурмуют оружейные склады и казармы и раздают тысячи мушкетов."
- LOADING_TIP_58:0 "3 мая 1866 года правительственные войска уходят по узким улочкам и отступают к черте города. Сотни солдат и революционеров погибли в боях за город."
+ LOADING_TIP_58:0 "3 мая 1866 года правительственные войска уходят по узким улочкам и отступают за Париж. Сотни солдат и революционеров погибли в боях за город."
  LOADING_TIP_59:0 "4 мая 1866 года парижане провозглашают республику. Правительственные войска начинают осаду города."
  LOADING_TIP_60:0 "5 мая 1866 года радикалы в Тулоне, Марселе и Орлеане проводят масштабные манифестации в поддержку республики. Местные гарнизоны отказываются стрелять по толпе."
  LOADING_TIP_61:0 "В июне 1866 года якобинцы начинают вооружаться в Великобритании, Вестфалии, Люксембурге, Италии и многих других странах."
