--- a/localisation/russian/parties_l_russian.yml
+++ b/localisation/russian/parties_l_russian.yml
@@ -294,14 +294,16 @@
  BUL_democratic_party_long:0 "Болгарская республиканская партия"
  BUL_fascism_party:0 "Легионеры"
  BUL_fascism_party_long:0 "Союз болгарских национальных легионов"
- CRO_communism_party:0 "Якобинско-социалистическая партия"
- CRO_communism_party_long:0 "Хорватская якобинско-социалистическая партия"
- CRO_neutrality_party:0 "Лоялисты Джелачич"
- CRO_neutrality_party_long:0 "Партия лоялистов Джелачич"
- CRO_democratic_party:0 "Консервативная партия"
- CRO_democratic_party_long:0 "Хорватская консервативная партия"
- CRO_fascism_party:0 "Католическая партия"
- CRO_fascism_party_long:0 "Хорватская католическая партия"
+ 
+ CRO_communism_party:0 "СКХ"
+ CRO_communism_party_long:0 "Союз коммунистов Хорватии"
+ CRO_neutrality_party:0 "Дом Драшковичей"
+ CRO_neutrality_party_long:0 "Дом Драшковичей"
+ CRO_democratic_party:0 "ХНКП"
+ CRO_democratic_party_long:0 "Хорватская народная крестьянская партия"
+ CRO_fascism_party:0 "Усташи"
+ CRO_fascism_party_long:0 "Усташи — хорватское революционное движение"
+ 
  ROM_communism_party:0 "Коммунистическая партия"
  ROM_communism_party_long:0 "Румынская коммунистическая партия"
  ROM_neutrality_party:0 "Лоялисты Куазы"
