--- a/localisation/russian/replace/deluge_poland_focuses_l_russian.yml
+++ b/localisation/russian/replace/deluge_poland_focuses_l_russian.yml
@@ -6,7 +6,7 @@
  POL_death_of_marshal_desc:0 "Юзеф Клеменс Пилсудский, маршал Польши, скончался. Сейчас решается судьба страны — будут ли продолжены старые порядки или установится новый. Без сомнения, это открывает некоторым амбициозным деятелям двери во власть, как бы сильно они не оплакивали нашу потерю."
  
  POL_continue_with_sanation:0 "Партия власти"
- POL_continue_with_sanation_desc:0 "У правительства нет более благородной задачи, чем продолжить дело Первого Маршала. Есть люди, которые готовы унаследовать великую ответственность оздоровления общества — унаследовать Санацию."
+ POL_continue_with_sanation_desc:0 "У правительства нет более благородной задачи, чем продолжить дело нашего первого генерального инспектора. Есть люди, которые готовы унаследовать великую ответственность оздоровления общества — унаследовать Санацию."
  
  POL_smigly_wins:0 "Эдвард Рыдз-Смиглы"
  POL_smigly_wins_desc:0 "Рыдз-Смиглы — идеальный кандидат на роль маршала. Это человек с опытом службы как в армии, так и в авиации, который не боится принимать трудные решения. Если мы хотим не просто защитить Польшу, но и вернуть ей былое величие, то нам нужен Эдвард."
@@ -83,7 +83,7 @@
  POL_fund_galleries_of_patriotic_art_desc:0 "Пробудить массовое сознание возможно новым направлением в искусстве. Серия патриотических плакатов и спонсирование наших художников подстегнёт общественный настрой. Эти произведения должны внушать гордость нам, а трепет врагам."
  
  POL_sikorski_wins:0 "Владислав Сикорский"
- POL_sikorski_wins_desc:0 "Хоть Сикорский не был другом нашего любимого маршала, но у него есть рвение, а самое главное талант. Он прилежный офицер и настоящий патриот. Кто, если не он, сможет уберечь нашу Польшу от смерча неопредёленности, что сейчас затягивает мир?"
+ POL_sikorski_wins_desc:0 "Хоть Сикорский не всегда соглашался с нашим любимым маршалом, у него есть рвение, а самое главное талант. Он прилежный офицер и настоящий патриот. Кто, если не он, сможет уберечь нашу Польшу от смерча неопредёленности, что сейчас затягивает мир?"
  POL_culture_not_race:0 "Культура, а не раса"
  POL_culture_not_race_desc:0 "Польша — многонациональное государство. Если мы будем дробить её граждан по расовому признаку, то не только обделим себя людскими ресурсами, но и посеем смуту. Вместо того, чтобы просто вычеркнуть малые народы из нашей жизни, мы предложим правительству план их аккультурации."
  POL_start_cultural_integration:0 "Культурная интеграция"
@@ -121,10 +121,10 @@
  POL_better_living_conditions_for_countryside:0 "Новые сельские стандарты"
  POL_better_living_conditions_for_countryside_desc:0 "Самой большой проблемой сельской местности являются относительно низкие условия жизни. Это вынудило значительную часть сельского населения переехать в крупные города, особенно в последнее десятилетие. Мы должны совершать больше госдотаций, чтобы создать новые рабочие места и модернизировать местную инфраструктуру."
  POL_make_deal_with_king:0 "Сделка с королём"
- POL_make_deal_with_king_desc:0 "Фридерик Кристиан II не является помехой для правительства Санации, какой был его отец. Мы можем использовать молодого короля в наших целях, передав ему лишь номинальную власть. Будем играть в монархию, пока люду это нравится."
+ POL_make_deal_with_king_desc:0 "Фридерик Кристиан II не является помехой для правительства Санации. Мы можем использовать молодого короля в наших целях, передав ему лишь номинальную власть. Будем играть в монархию, пока люду это нравится."
  
  POL_stachniuk_wins:0 "Ян Стахнюк"
- POL_stachniuk_wins_desc:0 "Стахнюк — неоязычник, обладающий обаянием, влиянием и необычными идеями. Он критикует христианство и капитализм, а также призывает вернуться к жизни в традициях праславянского общества. Польше эта идеология более близка, чем может показаться на первый взгляд, но чтобы доказать это, нужно снять маску католицизма с нашей нации."
+ POL_stachniuk_wins_desc:0 "«Стойгнев» Стахнюк — неоязычник, обладающий обаянием, влиянием и необычными идеями. Он критикует христианство и капитализм, а также призывает вернуться к жизни в традициях праславянского общества. Польше эта идеология более близка, чем может показаться на первый взгляд, но чтобы доказать это, нужно снять маску католицизма с нашей нации."
  POL_find_support_among_radicals:0 "Поддержка радикалов"
  POL_find_support_among_radicals_desc:0 "Некоторые радикалы считают наши действия правильными из-за экономической программы и отношения к католической церкви. Мы могли бы привлечь этих красных в работу на новое Польское государство, а не на разрушительную революцию."
  POL_find_support_among_artists:0 "Поддержка художников"
@@ -138,22 +138,22 @@
  POL_seek_support_from_catholic_church_desc:0 "Католическая церковь является важной частью Польши и нашей главной идеологической опорой. Мы должны расположить к себе церковь, например, передачей ряда собственности в её пользу."
  
  POL_purge_the_party:0 "Партийные перестановки"
- POL_purge_the_party_desc:0 "Так ли нам нужна Санация? Хоть мы и захватили власть, позади нас много приверженцев старой политики с большим влиянием и авторитетом. Если им на замену не придет новая организация, мы рискуем оказаться в политическом тупике."
+ POL_purge_the_party_desc:0 "Хоть мы и захватили власть, позади нас много приверженцев старой политики с большим влиянием и авторитетом. Если им на замену не придет новая организация, мы рискуем оказаться в политическом тупике."
  
  POL_establish_zadruga:0 "«Задруга»"
- POL_establish_zadruga_desc:0 "Предыдущее правительство запуталось в том, чем оно хотело быть, а потому проиграло. Мы же знаем своё предназначение. Движение польских националистов «Задруга» ставит целью объединение славян в рамках единого славянского государства и мы с честью готовы взять на себя эту миссию."
+ POL_establish_zadruga_desc:0 "Предыдущее правительство запуталось в том, чем оно хотело быть, а потому проиграло. Мы же знаем своё предназначение. Движение польских националистов «Задруга» ставит целью восстановить древние ценности и верования, а также победу над западной отсталой культурой и уничтожение всех врагов отечества. Мы с честью готовы взять на себя эту миссию."
  POL_take_peoples_property_from_capitalists:0 "Национализация иностранной собственности"
  POL_take_peoples_property_from_capitalists_desc:0 "Чем дольше мы позволяем иностранным капиталистам обогащаться на польском рынке, тем слабее наше государство становится. Этому нужно положить конец! Все богатства Польши должны принадлежать только её народу."
  POL_propagation_of_proletarian_nationalism:0 "Пролетарский национализм"
  POL_propagation_of_proletarian_nationalism_desc:0 "В отличие от интернационалистов, мы не ставим своей целью мировую революцию и низвержение государства. Польша и её рабочие превыше всего. Эту позицию надо донести как до наших граждан, так и до наших соседей."
  POL_introduction_of_national_collectivist_economy:0 "Коллективистская экономика"
  POL_introduction_of_national_collectivist_economy_desc:0 "Следующим шагом на пути к построению национально ориентированного государства будет внедрение коллективистской экономики, в которой будут сочетаться централизованное планирование и малое предпринимательство."
- POL_establishment_of_national_creating_community:0 "Коллективный энтузиазм"
+ POL_establishment_of_national_creating_community:0 "Национальное созидательное сообщество"
  POL_establishment_of_national_creating_community_desc:0 "Мы очень сильно изменили социальную и экономическую жизнь польского народа. Теперь мы можем приступить к созданию общества нового типа. В этом обществе не будет классов, но оно будет организовано иерархически, так, чтобы каждый выполнял свою работу, но не чувствовал себя угнетённым."
  POL_lechitic_legacy:0 "Лехитское наследие"
  POL_lechitic_legacy_desc:0 "Некоторые говорят, что Великой Лехитской империи не существовало, но на самом деле важно то, что мы можем использовать эту легенду в пропагандистских целях и обоснования наших действий на мировой арене."
  POL_gloryfiy_mieslaws_uprising:0 "Чтить восстание Моислава"
- POL_gloryfiy_mieslaws_uprising_desc:0 "Восстание Моислава было ответом на высокие налоги и подавление местных верований католической церковью во время правления короля Мешко I. Он создал своё собственное государство на Мазовецкой земле и восстановил там славянскую веру. Однако это продолжалось недолго — в 1047 году король Пястов вернулся и разгромил восстание."
+ POL_gloryfiy_mieslaws_uprising_desc:0 "Восстание Моислава было ответом на высокие налоги и подавление местных верований католической церковью во время правления короля Мешко II. Он создал своё собственное государство на Мазовецкой земле и восстановил там славянскую веру. Однако это продолжалось недолго — в 1047 году король Пястов вернулся и разгромил восстание."
  POL_torch_for_all_slavs:0 "Факел для всех славян"
  POL_torch_for_all_slavs_desc:0 "Ян Стахнюк в одной из своих книг создал концепцию «Супернации» — нации всех славян, где изначально все культуры равны, но которые в конце концов сливаются в одну «Суперкультуру», которая будет превыше любой другой."
  POL_keep_friends_from_above_baltic:0 "Балто-славянское родство"
@@ -168,8 +168,8 @@
  POL_return_of_ancient_faith_desc:0 "Наконец-то мы ослабили католическую церковь и освободили все святые места славянской веры! Работы ещё много, но теперь мы можем помочь народам восстановить верования наших общих предков."
  POL_incorporate_beauty_of_east:0 "Красота востока"
  POL_incorporate_beauty_of_east_desc:0 "Адам Мицкевич во многих поэмах воспевал красоту востока. Эти земли взаправду достойны стать частью великой Славии. Однако прежде их нужно защитить от тех, кто посягает на саму культуру нашего большого народа."
- POL_the_true_messiah_arrival:0 "Культурная революция"
- POL_the_true_messiah_arrival_desc:0 "Когда-то нас считали политическими маргиналами, а мы теперь стали опорой всех славян. После долгой борьбы пришла пора исполнить заветную цель «Задруги» и нашего Стойгнева. Мы провозгласим культурную революцию, которая объединит всё славянское."
+ POL_the_true_messiah_arrival:0 "Пришествие истинного мессии"
+ POL_the_true_messiah_arrival_desc:0 "Когда-то нас считали политическими маргиналами, а мы теперь стали опорой всех славян. Но до сих пор мы не замечали самого главного — Мессия, о котором давно писал Адам Мицкевич, всё это время был рядом. Теперь ясно, что наш Стойгнев и есть тот самый сорок и четыре, который пришёл защитить и воскресить государство!"
  
  POL_oppose_sanation:0 "Противостоять Санации"
  POL_oppose_sanation_desc:0 "Квазирегентский режим Пилсудского без него самого ничего из себя не представляет. Уже сейчас между его сторонниками разгорается борьба за право быть диктатором. Давайте не будем ждать, когда военщина устроит террор!"
