--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -264,17 +264,17 @@
  POL_empire_fascism_DEF:0 "the Greater Polish Empire"
  POL_empire_fascism_ADJ:0 "Polish"
  
- POL_rzeczpospolita_communism:0 "Polish People's Republic"
- POL_rzeczpospolita_communism_DEF:0 "the Polish People's Republic"
+ POL_rzeczpospolita_communism:0 "Polish Workers' National State"
+ POL_rzeczpospolita_communism_DEF:0 "the Polish Workers' National State"
  POL_rzeczpospolita_communism_ADJ:0 "Polish"
  POL_rzeczpospolita_democratic:0 "Republic of Poland"
  POL_rzeczpospolita_democratic_DEF:0 "the Republic of Poland"
  POL_rzeczpospolita_democratic_ADJ:0 "Polish"
- POL_rzeczpospolita_neutrality:0 "Republic of Poland"
- POL_rzeczpospolita_neutrality_DEF:0 "the Republic of Poland"
+ POL_rzeczpospolita_neutrality:0 "Polish State"
+ POL_rzeczpospolita_neutrality_DEF:0 "the Polish State"
  POL_rzeczpospolita_neutrality_ADJ:0 "Polish"
- POL_rzeczpospolita_fascism:0 "Republic of Poland"
- POL_rzeczpospolita_fascism_DEF:0 "the Republic of Poland"
+ POL_rzeczpospolita_fascism:0 "Polish State"
+ POL_rzeczpospolita_fascism_DEF:0 "the Polish State"
  POL_rzeczpospolita_fascism_ADJ:0 "Polish"
  
  POL_falanga_communism:0 "Polish Socialist Council Republic"
